--- a/.github/workflows/build_example.yml
+++ b/.github/workflows/build_example.yml
@@ -21,11 +21,15 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: bootstrap
+      shell: cmd
       run: wilco\bootstrap.bat example\wilco.cpp
     - name: configure
+      shell: cmd
       run: example\wilco configure
     - name: build
+      shell: cmd
       run: example\wilco build
     - name: run
+      shell: cmd
       run: example\bin\Hello
     
